// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartnerLogoComponent should not render the template when there is not VM provided 1`] = `
<div
  id="root1"
  ng-version="18.2.7"
>
  <!--container-->
</div>
`;

exports[`PartnerLogoComponent should render the template correctly when there is a VM provided 1`] = `
<div
  id="root2"
  ng-version="18.2.7"
>
  <img
    alt="logo"
    class="w-52 h-52"
    src="assets/lepke.jpg"
  />
  <!--container-->
</div>
`;
